chore: user creation
