# cmd/api/api.go
@@ -2,13 +2,13 @@ package main
 
 import (
 	"fmt"
-	"log"
 	"net/http"
 	"time"
 
 	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/chi/v5/middleware"
 	httpSwagger "github.com/swaggo/http-swagger/v2"
+	"go.uber.org/zap"
 
 	"github.com/wesleybruno/golang-monolito/docs"
 	"github.com/wesleybruno/golang-monolito/internal/store"
@@ -17,6 +17,7 @@ import (
 type application struct {
 	config config
 	store  store.Storage
+	logger *zap.SugaredLogger
 }
 
 type config struct {
@@ -24,6 +25,11 @@ type config struct {
 	addr     string
 	env      string
 	apiUrl   string
+	mail     mail
+}
+
+type mail struct {
+	exp time.Duration
 }
 
 type dbConfig struct {
@@ -64,6 +70,9 @@ func (app *application) mount() http.Handler {
 		})
 
 		r.Route("/user", func(r chi.Router) {
+
+			r.Put("/activate/{token}", app.activateUserHandler)
+
 			r.Route("/{userId}", func(r chi.Router) {
 				r.Use(app.userContextMiddleware)
 				r.Get("/", app.getUserHandler)
@@ -75,8 +84,11 @@ func (app *application) mount() http.Handler {
 			r.Group(func(r chi.Router) {
 				r.Get("/feed", app.getUserFeedHandler)
 			})
-		})
 
+		})
+		r.Route("/auth", func(r chi.Router) {
+			r.Post("/user", app.registerUserHandler)
+		})
 	})
 
 	return r
@@ -97,7 +109,7 @@ func (app *application) run(mux http.Handler) error {
 		IdleTimeout:  time.Minute,
 	}
 
-	log.Printf("server started at port %s", app.config.addr)
+	app.logger.Infow("server started at port", "addr", app.config.addr, "env", app.config.env)
 
 	return srv.ListenAndServe()
 }
